# Tr-ck-it-Personal-Finance-Tracker

./: README.md
Personal-Finance-Tracking/: app.py  main.py  pyproject.toml
