[project]
name = "personal-finance-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.15.2",
    "crewai-tools>=1.15.2",
    "litellm>=1.92.0",
    "load-dotenv>=0.1.0",
    "markdown>=3.10.2",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "plotly>=6.9.0",
    "streamlit>=1.59.2",
    "supabase>=2.31.0",
]
